--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@
 }
 
 #display {
-  height: 400px;
-  width: 600px;
+  object-fit: cover;
   border: 5px solid rgb(255, 255, 255);
   border-width: 0.5rem;
 }
